avoid parallel too early